<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:contentDescription="hf_no_number"
    android:orientation="vertical">

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="hf_no_number"
        android:focusable="false"
        android:clickable="false"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="810dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="410dp"
        android:max="1000"
        android:progressTint="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_past_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        android:text="00:00"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        />

    <TextView
        android:id="@+id/tv_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        android:layout_marginEnd="5dp"
        android:text="00:00"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        />



    <LinearLayout
        android:id="@+id/ll_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4D000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        >



        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/icon_play"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_play"
                />
            <ImageView
                android:visibility="gone"
                android:id="@+id/icon_pause"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_pause"
                />
            <ImageView
                android:visibility="gone"
                android:id="@+id/icon_stop"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_stop"
                />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/play_btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@drawable/btn_bg_round"
            android:gravity="center"
            android:text="@string/video_play"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:visibility="gone"
            android:id="@+id/stop_btn"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_bg_round"
            android:gravity="center"
            android:text="@string/video_stop"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            />




    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="15dp"
        >
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_cancel"
            android:contentDescription="hf_no_number"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_save"
            android:contentDescription="hf_no_number"
            android:layout_gravity="bottom|right"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>



    <TextView
        android:id="@+id/volume1"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume2"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume3"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume4"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume5"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume6"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume7"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume8"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume9"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/volume10"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/volume10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/mute"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:text="@string/mute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>