<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:contentDescription="hf_no_overlay"
    android:id="@+id/layout"
    android:background="#F6F6F6">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/ll_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <!--뒤로-->
        <LinearLayout
            android:id="@+id/llGoBack"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/btn_bg_round_dark"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/icon_finish"
                android:gravity="center"
                android:contentDescription="hf_no_number" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:contentDescription="hf_no_number"
                android:text="@string/go_back"
                android:textColor="@android:color/white"
                android:textSize="18px"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llZoom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="7dp"
            android:background="@drawable/btn_bg_round"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoom"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_zoom_level_numbers"
                android:layout_marginStart="7dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/text_yellow"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView

            android:id="@+id/tv_focus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_bg_round"
            android:gravity="center"
            android:text="@string/manual_focus"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_flash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_bg_round"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tv_flash"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="6dp"
                android:gravity="center"
                android:text="@string/flash"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_flash_status"
                android:layout_marginEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/flash_off"
                android:textColor="@color/text_yellow"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@drawable/btn_bg_round"
            android:gravity="center"
            android:text="@string/hide_menu"
            android:textColor="@android:color/white"
            android:textSize="18px"
            android:textStyle="bold" />

    </LinearLayout>




    <TextView
        android:id="@+id/tv_capture_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bt_capture"
        android:contentDescription="hf_no_number"
        android:gravity="center"
        android:text="@string/capture"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!--모드선택-->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_mode_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:background="@drawable/btn_bg_round_line"
            android:gravity="center"
            android:text="@string/photo"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_video"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_bg_round"
            android:gravity="center"
            android:text="@string/video"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>