<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="hf_no_overlay"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:id="@+id/ll_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        >

        <!--뒤로-->
        <LinearLayout
            android:id="@+id/ll_back"
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/bt_manual_focus"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_finish"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:contentDescription="hf_no_number"
                android:text="@string/go_back"
                android:textColor="@android:color/white"
                android:textSize="18px"
                android:textStyle="bold" />
        </LinearLayout>


        <!--줌 레벨-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="3dp"
            android:gravity="center"
            android:layout_marginStart="7dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:background="@drawable/btn_bg_round"
            >

            <TextView
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="hf_no_overlay"
                android:text="@string/zoom"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_zoom_level_numbers"
                android:layout_marginStart="7dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@color/text_yellow"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="4"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <!--화질 HD FHD-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_HD"
                android:layout_width="60dp"
                android:layout_height="38dp"
                android:background="@drawable/btn_bg_round"
                android:gravity="center"
                android:text="@string/hd"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_FHD"
                android:layout_width="60dp"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/btn_bg_round_line"
                android:gravity="center"
                android:text="@string/fhd"
                android:textColor="@color/colorWhite"
                android:textSize="18px"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>




    <LinearLayout
        android:id="@+id/ll_recordTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="28dp"
        >

        <ImageView
            android:id="@+id/iv_record_red_circle"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@drawable/record_circle"
            />

        <TextView
            android:layout_marginStart="8dp"
            android:id="@+id/tv_recordTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="00:00"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

        <TextView
            android:layout_marginStart="8dp"
            android:id="@+id/tv_availableTime_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="/ 60:00"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"
            />

    </LinearLayout>







    <!--촬영버튼-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ib_recorde_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="28px"
            android:layout_marginBottom="28px"
            android:background="@drawable/bt_capture"
            android:contentDescription="hf_no_number"
            android:gravity="center"
            android:text="@string/video_start"
            android:textColor="@android:color/white"
            android:textSize="18px"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ib_recorde_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="28px"
            android:layout_marginBottom="28px"
            android:background="@drawable/bt_capture"
            android:contentDescription="hf_no_number"
            android:gravity="center"
            android:text="@string/video_stop"
            android:textColor="@android:color/white"
            android:textSize="18px"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

    <!--모드선택-->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/ll_mode_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/tv_photo"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:background="@drawable/btn_bg_round"
            android:gravity="center"
            android:text="@string/photo"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_bg_round_line"
            android:gravity="center"
            android:text="@string/video"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
